--- a/gallery.html
+++ b/gallery.html
@@ -61,11 +61,11 @@ img,video{
     </div> -->
 
     <script src="gallery.js"></script>
-    <script>
+<!--     <script>
         setTimeout(function (){
             viewMedia();
         }, 100);
-    </script>
+    </script> -->
 </body>
 
 </html>
